--- a/ui/src/main/res/values-night/colors.xml
+++ b/ui/src/main/res/values-night/colors.xml
@@ -1,4 +1,6 @@
 <resources>
     <color name="icon_background">#1c1b20</color>
     <color name="icon_foreground">#FFFFFF</color>
+    <color name="jimber_primary">#FFFFFF</color>
+    <color name="jimber_primary_button">#1c1b20</color>
 </resources>
