--- a/ui/src/main/res/values/colors.xml
+++ b/ui/src/main/res/values/colors.xml
@@ -61,6 +61,9 @@
     <color name="md_theme_dark_outlineVariant">#44474F</color>
     <color name="md_theme_dark_scrim">#000000</color>
 
+    <color name="white">#FFFFFF</color>
     <color name="icon_background">#FFFFFF</color>
     <color name="icon_foreground">#111279</color>
+    <color name="jimber_primary">#111279</color>
+    <color name="jimber_primary_button">#FFFFFF</color>
 </resources>
