feature(renamings): renamings + implement api calls to signal

--- a/ui/src/main/res/layout/tunnel_detail_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_detail_fragment.xml
@@ -19,7 +19,7 @@
 
         <variable
             name="config"
-            type="com.wireguard.config.Config" />
+            type="com.jimberisolation.config.Config" />
     </data>
 
     <ScrollView
