--- a/ui/src/main/res/layout/tunnel_detail_peer.xml
+++ b/ui/src/main/res/layout/tunnel_detail_peer.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="item"
-            type="com.wireguard.config.Peer" />
+            type="com.jimberisolation.config.Peer" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
