--- a/ui/src/main/res/layout/welcome_activity.xml
+++ b/ui/src/main/res/layout/welcome_activity.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <FrameLayout
@@ -7,12 +6,12 @@
 
         <include layout="@layout/base_layout" />
 
-        <!-- Container LinearLayout to stack logo and text vertically -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textAlignment="center"
             android:orientation="vertical"
-            android:gravity="center"> <!-- Center content vertically and horizontally -->
+            android:gravity="center">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/logo_placeholder"
@@ -20,6 +19,30 @@
                 android:layout_width="280dp"
                 android:layout_height="111dp"
                 android:src="@drawable/jimber_logo_full" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/sign_in"
+                android:layout_width="280dp"
+                android:layout_height="50dp"
+                android:text="Sign in to your account"
+                android:layout_margin="8dp"
+                android:textStyle="bold"
+                android:backgroundTint="@color/jimber_primary"
+                android:drawableLeft="@drawable/ic_action_sign_in"
+                app:cornerRadius="4dp"
+                />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/add_connection"
+                android:layout_width="280dp"
+                android:layout_height="50dp"
+                android:text="Add a connection"
+                android:layout_margin="8dp"
+                android:textStyle="bold"
+                android:backgroundTint="@color/jimber_primary"
+                android:drawableLeft="@drawable/ic_action_add_white"
+                app:cornerRadius="4dp"
+                />
 
         </LinearLayout>
 
