feature(auth): logout functionality

--- a/ui/src/main/res/xml/preferences.xml
+++ b/ui/src/main/res/xml/preferences.xml
@@ -1,17 +1,24 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:key="settings">
 
-    <com.jimberisolation.android.preference.VersionPreference
-        android:key="version"
-        android:icon="@drawable/ic_launcher_foreground"/>
+    <com.jimberisolation.android.preference.SignOutPreference
+        android:key="sign_out"
+        android:icon="@drawable/logout"/>
 
-    <com.jimberisolation.android.preference.QuickTilePreference android:key="quick_tile" />
+    <com.jimberisolation.android.preference.QuickTilePreference
+        android:key="quick_tile"
+        android:icon="@drawable/add_tile"/>
 
     <Preference
         android:key="log_viewer"
         android:singleLineTitle="false"
+        android:icon="@drawable/log_icon"
         android:summary="@string/log_viewer_pref_summary"
         android:title="@string/log_viewer_pref_title" />
+
+    <com.jimberisolation.android.preference.VersionPreference
+        android:key="version"
+    />
 
     <Preference
         android:key="change_public_ip"
@@ -20,9 +27,9 @@
         android:title="Change Public IP" />
 
     <Preference
-        android:key="deauthorize"
+        android:key="clear_cache"
         android:singleLineTitle="false"
-        android:summary="Reset JWT credentials"
-        android:title="DeAuthorize" />
+        android:summary="Clear cache of app completely"
+        android:title="Clear Cache" />
 
 </androidx.preference.PreferenceScreen>
