--- a/ui/src/main/res/drawable/tv_logo_banner.xml
+++ b/ui/src/main/res/drawable/tv_logo_banner.xml
@@ -1,8 +1,7 @@
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright © 2017-2025 WireGuard LLC. All Rights Reserved.
   ~ SPDX-License-Identifier: Apache-2.0
   -->
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="1934.5dp"
     android:height="393.14dp"
