--- a/ui/src/main/res/xml/app_restrictions.xml
+++ b/ui/src/main/res/xml/app_restrictions.xml
@@ -1,8 +1,7 @@
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright © 2017-2025 WireGuard LLC. All Rights Reserved.
   ~ SPDX-License-Identifier: Apache-2.0
   -->
-
 <restrictions xmlns:android="http://schemas.android.com/apk/res/android">
     <restriction
         android:defaultValue="false"
