--- a/ui/src/main/res/layout/main_activity.xml
+++ b/ui/src/main/res/layout/main_activity.xml
@@ -11,7 +11,7 @@
     tools:context=".activity.MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/detail_container"
+        android:id="@+id/list_detail_container"
         android:name="com.wireguard.android.fragment.TunnelListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
