--- a/ui/src/main/res/layout/dialog_input_name.xml
+++ b/ui/src/main/res/layout/dialog_input_name.xml
@@ -14,7 +14,7 @@
         android:id="@+id/namePrompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Please enter your name:"
+        android:text="Enter a name for this device:"
         android:textSize="16sp"
         android:layout_marginBottom="8dp" />
 
