--- a/ui/src/main/res/layout/app_list_dialog_fragment.xml
+++ b/ui/src/main/res/layout/app_list_dialog_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright © 2017-2025 HEZWIN LLC. All Rights Reserved.
+  ~ Copyright © 2017-2025 WireGuard LLC. All Rights Reserved.
   ~ SPDX-License-Identifier: Apache-2.0
   -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -10,15 +10,15 @@
 
         <import type="android.view.View" />
 
-        <import type="com.hezwin.android.model.ApplicationData" />
+        <import type="com.wireguard.android.model.ApplicationData" />
 
         <variable
             name="fragment"
-            type="com.hezwin.android.fragment.AppListDialogFragment" />
+            type="com.wireguard.android.fragment.AppListDialogFragment" />
 
         <variable
             name="appData"
-            type="com.hezwin.android.databinding.ObservableKeyedArrayList&lt;String, ApplicationData&gt;" />
+            type="com.wireguard.android.databinding.ObservableKeyedArrayList&lt;String, ApplicationData&gt;" />
     </data>
 
     <LinearLayout
