--- a/ui/src/main/res/layout/main_activity.xml
+++ b/ui/src/main/res/layout/main_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright © 2017-2025 HEZWIN LLC. All Rights Reserved.
+  ~ Copyright © 2017-2025 WireGuard LLC. All Rights Reserved.
   ~ SPDX-License-Identifier: Apache-2.0
   -->
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -12,7 +12,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/list_detail_container"
-        android:name="com.hezwin.android.fragment.TunnelListFragment"
+        android:name="com.wireguard.android.fragment.TunnelListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:tag="LIST" />
