--- a/ui/src/main/res/layout/tunnel_detail_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_detail_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright © 2017-2025 HEZWIN LLC. All Rights Reserved.
+  ~ Copyright © 2017-2025 WireGuard LLC. All Rights Reserved.
   ~ SPDX-License-Identifier: Apache-2.0
   -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,21 +8,21 @@
 
     <data>
 
-        <import type="com.hezwin.android.backend.Tunnel.State" />
+        <import type="com.wireguard.android.backend.Tunnel.State" />
 
-        <import type="com.hezwin.android.util.ClipboardUtils" />
+        <import type="com.wireguard.android.util.ClipboardUtils" />
 
         <variable
             name="fragment"
-            type="com.hezwin.android.fragment.TunnelDetailFragment" />
+            type="com.wireguard.android.fragment.TunnelDetailFragment" />
 
         <variable
             name="tunnel"
-            type="com.hezwin.android.model.ObservableTunnel" />
+            type="com.wireguard.android.model.ObservableTunnel" />
 
         <variable
             name="config"
-            type="com.hezwin.config.Config" />
+            type="com.wireguard.config.Config" />
     </data>
 
     <ScrollView
@@ -60,7 +60,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <com.hezwin.android.widget.ToggleSwitch
+                    <com.wireguard.android.widget.ToggleSwitch
                         android:id="@+id/tunnel_switch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
