--- a/ui/src/main/res/layout/tunnel_list_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_list_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright © 2017-2025 HEZWIN LLC. All Rights Reserved.
+  ~ Copyright © 2017-2025 WireGuard LLC. All Rights Reserved.
   ~ SPDX-License-Identifier: Apache-2.0
   -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,19 +8,19 @@
 
     <data>
 
-        <import type="com.hezwin.android.model.ObservableTunnel" />
+        <import type="com.wireguard.android.model.ObservableTunnel" />
 
         <variable
             name="fragment"
-            type="com.hezwin.android.fragment.TunnelListFragment" />
+            type="com.wireguard.android.fragment.TunnelListFragment" />
 
         <variable
             name="rowConfigurationHandler"
-            type="com.hezwin.android.databinding.ObservableKeyedRecyclerViewAdapter.RowConfigurationHandler" />
+            type="com.wireguard.android.databinding.ObservableKeyedRecyclerViewAdapter.RowConfigurationHandler" />
 
         <variable
             name="tunnels"
-            type="com.hezwin.android.databinding.ObservableKeyedArrayList&lt;String, ObservableTunnel&gt;" />
+            type="com.wireguard.android.databinding.ObservableKeyedArrayList&lt;String, ObservableTunnel&gt;" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
