--- a/ui/src/main/res/layout/tunnel_list_item.xml
+++ b/ui/src/main/res/layout/tunnel_list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright © 2017-2025 HEZWIN LLC. All Rights Reserved.
+  ~ Copyright © 2017-2025 WireGuard LLC. All Rights Reserved.
   ~ SPDX-License-Identifier: Apache-2.0
   -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,13 +8,13 @@
 
     <data>
 
-        <import type="com.hezwin.android.model.ObservableTunnel" />
+        <import type="com.wireguard.android.model.ObservableTunnel" />
 
-        <import type="com.hezwin.android.backend.Tunnel.State" />
+        <import type="com.wireguard.android.backend.Tunnel.State" />
 
         <variable
             name="collection"
-            type="com.hezwin.android.databinding.ObservableKeyedArrayList&lt;String, ObservableTunnel&gt;" />
+            type="com.wireguard.android.databinding.ObservableKeyedArrayList&lt;String, ObservableTunnel&gt;" />
 
         <variable
             name="key"
@@ -22,14 +22,14 @@
 
         <variable
             name="item"
-            type="com.hezwin.android.model.ObservableTunnel" />
+            type="com.wireguard.android.model.ObservableTunnel" />
 
         <variable
             name="fragment"
-            type="com.hezwin.android.fragment.TunnelListFragment" />
+            type="com.wireguard.android.fragment.TunnelListFragment" />
     </data>
 
-    <com.hezwin.android.widget.MultiselectableRelativeLayout
+    <com.wireguard.android.widget.MultiselectableRelativeLayout
         android:id="@+id/tunnel_list_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,7 +52,7 @@
             android:textAppearance="?attr/textAppearanceBodyLarge"
             tools:text="@sample/interface_names.json/names/names/name" />
 
-        <com.hezwin.android.widget.ToggleSwitch
+        <com.wireguard.android.widget.ToggleSwitch
             android:id="@+id/tunnel_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -62,5 +62,5 @@
             app:checked="@{item.state == State.UP}"
             app:onBeforeCheckedChanged="@{fragment::setTunnelState}"
             tools:checked="@sample/interface_names.json/names/checked/checked" />
-    </com.hezwin.android.widget.MultiselectableRelativeLayout>
+    </com.wireguard.android.widget.MultiselectableRelativeLayout>
 </layout>
